--- a/src/ArticleMatch.css
+++ b/src/ArticleMatch.css
@@ -13,62 +13,48 @@
 }
 
 /* Header */
+
+
 .match-header {
     display: flex;
     align-items: center;
     gap: 1rem;
-    margin-bottom: 2rem;
+    padding-left: 11%;
+    margin-bottom: 16px;
+}
+
+.match-header .back-btn {
+    background: rgba(128, 128, 128, 0.137);
+    border: 1px solid grey;
+    width: 40px;
+    height: 40px;
+    border-radius: 10px;
+    font-size: 1.5rem;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    color: inherit;
+}
+
+.dark .match-header .back-btn {
+    color: white;
+}
+
+.match-header .back-btn:hover {
+    background: rgb(222, 222, 245);
+    transform: translateX(-4px);
 }
 
 .match-header h1 {
+    font-size: 1.6rem;
+    margin: 0;
     font-family: 'Times New Roman', Times, serif;
 }
 
 .match-header p {
-    font-family: sans-serif;
-}
-
-.back-btn {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    /* border: 1px solid #e2e8f0; */
-    /* background: white; */
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
-    transition: all 0.2s;
-    font-size: 1.2rem;
-    color: inherit;
-}
-
-.back-btn:hover {
-    background: #f1f5f9;
-    transform: translateX(-2px);
-}
-
-.dark .back-btn:hover {
-    background: rgba(255, 255, 255, 0.1);
-}
-
-.match-header h1 {
-    font-size: 1.8rem;
-    font-weight: 700;
-    color: #0f172a;
-}
-
-.dark .match-header h1 {
-    color: var(--text-color);
-}
-
-.match-header p {
-    color: #64748b;
+    margin: 0.5rem 0 0;
+    color: grey;
     font-size: 0.95rem;
-}
-
-.dark .match-header p {
-    color: var(--text-secondary);
+    font-family: sans-serif;
 }
 
 /* Start Screen */
@@ -141,8 +127,8 @@
     text-transform: capitalize;
 }
 
-.diff-btn1:disabled{
-    cursor: not-allowed;    
+.diff-btn1:disabled {
+    cursor: not-allowed;
 }
 
 .dark .diff-btn1 {
@@ -259,6 +245,14 @@
 /* Hard */
 
 @media (max-width: 768px) {
+    .match-header {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        padding-left: 0;
+        gap: 1.5rem;
+    }
+
     .grid-4 {
         grid-template-columns: repeat(2, 1fr);
     }
