--- a/src/ProfilePage.css
+++ b/src/ProfilePage.css
@@ -647,3 +647,15 @@
         margin: 10px auto;
     }
 }
+
+@media (max-width:380px){
+    .profile-actions .edit-btn{
+        padding: 8px 16px;
+        font-size: 12px;
+    }
+
+    .profile-actions .logout-btn{
+        padding: 8px 16px;
+        font-size: 12px;
+    }
+}
